--- a/responsive-web-design/tribute-page.css
+++ b/responsive-web-design/tribute-page.css
@@ -13,6 +13,8 @@ body {
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+    border: 2px solid #ec407a; /* Border added */
+    padding: 20px; /* Padding added */
 }
 
 #title {
@@ -22,6 +24,9 @@ body {
 
 #img-div {
     margin-top: 20px;
+    display: flex; 
+    flex-direction: column; 
+    align-items: center;
 }
 
 #image {
